<resources>
    <string name="app_name">Animation</string>
    <string name="network_connection">Network Connection</string>
    <string name="download_image">Download</string>
    <string name="downloading_image">"Downloading Image from "</string>
    <string name="button_zoomin">Zoom In</string>
    <string name="button_zoomout">Zoom Out</string>
    <string name="button_blink">Blink</string>
    <string name="button_rotate">Rotate</string>
    <string name="button_move">MoveRight</string>
</resources>
