<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rakesh.animation.MainActivity">

    <TextView
        android:id="@+id/TextView_Connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network_connection"
        android:textColor="#151dff"
        android:textSize="35dp"/>

    <ImageView
        android:id="@+id/ImageView_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView_Connection"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/Button_Download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_image"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="85dp" />


    <Button
        android:id="@+id/Button_zoomin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_zoomin"
        android:onClick="onClick"
         android:layout_alignBottom="@+id/Button_Download"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/Button_zoomout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_zoomout"
        android:onClick="onClick"
        android:layout_alignTop="@+id/Button_blink"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/Button_blink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_blink"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/Button_rotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_rotate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="85dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/Button_move"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_move"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
